--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,1 +1,7 @@
-{}
+{
+    "trailingComma": "all",
+    "tabWidth": 4,
+    "semi": true,
+    "singleQuote": false,
+    "vueIndentScriptAndStyle": true
+}
