--- a/package.json
+++ b/package.json
@@ -1,54 +1,50 @@
 {
-  "name": "login",
-  "version": "0.0.0",
-  "scripts": {
-    "serve": "vite preview",
-    "build": "vite build",
-    "test:unit": "vitest --environment jsdom --root src/",
-    "test:e2e": "start-server-and-test preview :4173 'cypress run --e2e'",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "build-only": "vite build",
-    "dev": "vite",
-    "preview": "vite preview",
-    "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' :4173 'cypress open --e2e'",
-    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false"
-  },
-  "dependencies": {
-    "@mdi/font": "5.9.55",
-    "roboto-fontface": "*",
-    "vue": "^3.2.41",
-    "vue-router": "^4.1.5",
-    "vuetify": "npm:@vuetify/nightly@next",
-    "webfontloader": "^1.0.0"
-  },
-  "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.4",
-    "@types/jsdom": "^20.0.0",
-    "@types/node": "^16.11.68",
-    "@types/webfontloader": "^1.0.0",
-    "@vitejs/plugin-vue": "^3.1.2",
-    "@vitejs/plugin-vue-jsx": "^2.0.1",
-    "@vue/eslint-config-typescript": "^11.0.0",
-    "@vue/test-utils": "^2.1.0",
-    "@vue/tsconfig": "^0.1.3",
-    "autoprefixer": "^10.4.13",
-    "cypress": "^10.10.0",
-    "eslint": "^8.22.0",
-    "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-vue": "^9.3.0",
-    "jsdom": "^20.0.1",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.19",
-    "prettier": "^2.7.1",
-    "sass": "~1.32",
-    "sass-loader": "^13.2.0",
-    "start-server-and-test": "^1.14.0",
-    "tailwindcss": "^3.2.4",
-    "typescript": "~4.7.4",
-    "vite": "^3.1.8",
-    "vite-plugin-vuetify": "^1.0.0-alpha.12",
-    "vitest": "^0.24.3",
-    "vue-cli-plugin-vuetify": "~2.5.8",
-    "vue-tsc": "^1.0.8"
-  }
+    "name": "login",
+    "version": "0.0.0",
+    "scripts": {
+        "serve": "vite preview",
+        "build": "vite build",
+        "test:unit": "vitest --environment jsdom --root src/",
+        "test:e2e": "start-server-and-test preview :4173 'cypress run --e2e'",
+        "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+        "build-only": "vite build",
+        "dev": "vite",
+        "preview": "vite preview",
+        "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' :4173 'cypress open --e2e'",
+        "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false"
+    },
+    "dependencies": {
+        "vue": "^3.2.41",
+        "vue-router": "^4.1.5",
+        "ant-design-vue": "^3.2.12",
+        "vuex": "^4.0.2"
+    },
+    "devDependencies": {
+        "@rushstack/eslint-patch": "^1.1.4",
+        "@types/jsdom": "^20.0.0",
+        "@types/node": "^16.11.68",
+        "@types/webfontloader": "^1.0.0",
+        "@vitejs/plugin-vue": "^3.1.2",
+        "@vitejs/plugin-vue-jsx": "^2.0.1",
+        "@vue/eslint-config-typescript": "^11.0.0",
+        "@vue/test-utils": "^2.1.0",
+        "@vue/tsconfig": "^0.1.3",
+        "autoprefixer": "^10.4.13",
+        "cypress": "^10.10.0",
+        "eslint": "^8.22.0",
+        "eslint-plugin-cypress": "^2.12.1",
+        "eslint-plugin-vue": "^9.3.0",
+        "jsdom": "^20.0.1",
+        "npm-run-all": "^4.1.5",
+        "postcss": "^8.4.19",
+        "prettier": "^2.7.1",
+        "sass": "~1.32",
+        "sass-loader": "^13.2.0",
+        "start-server-and-test": "^1.14.0",
+        "tailwindcss": "^3.2.4",
+        "typescript": "~4.7.4",
+        "vite": "^3.1.8",
+        "vitest": "^0.24.3",
+        "vue-tsc": "^1.0.8"
+    }
 }
