--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "strict": true,
     // Required in Vite
     "isolatedModules": true,
-    "preserveValueImports": true,
+    // "preserveValueImports": true,
     "importsNotUsedAsValues": "error",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
